@@ -22,9 +22,19 @@ QueryStats adds the number of queries to the log in the DB section:
 * X-QueryCount will be set to the number of queries
 * X-QueryRuntime will be set to the db runtime
 
-== Contributors
+== Requirements
+
+Tests pass with:
+* Rails 1.2.6: sqlite3
+* Rails 2.0.2: sqlite3, mysql
+* Rails 2.1.0: sqlite3, mysql
+
+== Maintainer
 
 * Dan Manges
+
+== Contributors
+
 * Guillaume Dufloux
 
 == License
