@@ -1,10 +1,14 @@
-# QueryStats::Logger
-
 module QueryStats
-  # Adds the query count to the log;
   module Logger
+    def self.included(base)
+      base.class_eval do
+        alias_method_chain :active_record_runtime, :query_stats
+        alias_method_chain :perform_action, :query_stats
+      end
+    end
+
     protected
-    # Append the query count to the active record data.
+
     def active_record_runtime_with_query_stats(*args, &block)
       active_record_runtime_without_query_stats(*args, &block) << " #{ActiveRecord::Base.connection.queries.count} queries"
     end
@@ -15,11 +19,5 @@ module QueryStats
       response.headers["X-QueryRuntime"] = "%.5f" % ActiveRecord::Base.connection.queries.runtime.to_s
     end
   
-    def self.included(base) #:nodoc:
-      base.class_eval do
-        alias_method_chain :active_record_runtime, :query_stats
-        alias_method_chain :perform_action, :query_stats
-      end
-    end
   end
 end
